--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,3 +21,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+executables:
+  update_tolstoy_sdk:
+    main: ./scripts/update.dart
