--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: tolstoy_flutter_sdk
 description: "Tolstoy Flutter SDK"
 publish_to: 'none'
-version: 0.1.1
+version: 0.1.2
 
 environment:
   sdk: ^3.5.3
@@ -13,6 +13,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   video_player: ^2.9.1
   http: ^1.2.2
+  visibility_detector: ^0.4.0+2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
