--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
   video_player: ^2.9.2
   http: ^1.2.2
