--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   http: ^0.13.5
   visibility_detector: ^0.4.0+2
   uuid: ^3.0.1
+  path: ^1.5.0
+  collection: ^1.14.0
 
 dev_dependencies:
   flutter_test:
