--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -6,11 +6,11 @@ analyzer:
     strict-raw-types: true
 linter:
   rules:
-    # - always_declare_return_types
-    # - always_put_control_body_on_new_line
-    # - always_put_required_named_parameters_first
+    - always_declare_return_types
+    - always_put_control_body_on_new_line
+    - always_put_required_named_parameters_first
     # - always_specify_types
-    # - always_use_package_imports
+    - always_use_package_imports
     - annotate_overrides
     - annotate_redeclares
     - avoid_annotating_with_dynamic
@@ -19,10 +19,10 @@ linter:
     - avoid_catching_errors
     # - avoid_classes_with_only_static_members
     - avoid_double_and_int_checks
-    # - avoid_dynamic_calls
+    - avoid_dynamic_calls
     - avoid_empty_else
     - avoid_equals_and_hash_code_on_mutable_classes
-    # - avoid_escaping_inner_quotes
+    - avoid_escaping_inner_quotes
     - avoid_field_initializers_in_const_classes
     - avoid_final_parameters
     - avoid_function_literals_in_foreach_calls
@@ -34,7 +34,7 @@ linter:
     - avoid_positional_boolean_parameters
     - avoid_print
     - avoid_private_typedef_functions
-    # - avoid_redundant_argument_values
+    - avoid_redundant_argument_values
     - avoid_relative_lib_imports
     - avoid_renaming_method_parameters
     - avoid_return_types_on_setters
@@ -43,7 +43,7 @@ linter:
     - avoid_setters_without_getters
     - avoid_shadowing_type_parameters
     - avoid_single_cascade_in_expression_statements
-    # - avoid_slow_async_io
+    - avoid_slow_async_io
     - avoid_type_to_string
     - avoid_types_as_parameter_names
     - avoid_unnecessary_containers
@@ -54,7 +54,7 @@ linter:
     - camel_case_extensions
     - camel_case_types
     - cancel_subscriptions
-    # - cascade_invocations
+    - cascade_invocations
     - cast_nullable_to_non_nullable
     - close_sinks
     - collection_methods_unrelated_type
@@ -69,7 +69,7 @@ linter:
     - deprecated_consistency
     - deprecated_member_use_from_same_package
     # - diagnostic_describe_all_properties
-    # - directives_ordering
+    - directives_ordering
     # - discarded_futures
     - do_not_use_environment
     - empty_catches
@@ -126,11 +126,11 @@ linter:
     - prefer_const_literals_to_create_immutables
     - prefer_constructors_over_static_methods
     - prefer_contains
-    # - prefer_double_quotes
-    # - prefer_expression_function_bodies
+    - prefer_double_quotes
+    - prefer_expression_function_bodies
     - prefer_final_fields
     - prefer_final_in_for_each
-    # - prefer_final_locals
+    - prefer_final_locals
     - prefer_for_elements_to_map_fromIterable
     - prefer_foreach
     - prefer_function_declarations_over_variables
@@ -139,14 +139,14 @@ linter:
     - prefer_if_null_operators
     - prefer_initializing_formals
     - prefer_inlined_adds
-    # - prefer_int_literals
+    - prefer_int_literals
     - prefer_interpolation_to_compose_strings
     - prefer_is_empty
     - prefer_is_not_empty
     - prefer_is_not_operator
     - prefer_iterable_whereType
     - prefer_mixin
-    # - prefer_null_aware_method_calls
+    - prefer_null_aware_method_calls
     - prefer_null_aware_operators
     - prefer_spread_collections
     - prefer_typing_uninitialized_variables
@@ -154,29 +154,29 @@ linter:
     - provide_deprecation_message
     # - public_member_api_docs
     - recursive_getters
-    # - require_trailing_commas
+    - require_trailing_commas
     - secure_pubspec_urls
     - sized_box_for_whitespace
     - sized_box_shrink_expand
     - slash_for_doc_comments
-    # - sort_child_properties_last
-    # - sort_constructors_first
-    # - sort_pub_dependencies
-    # - sort_unnamed_constructors_first
+    - sort_child_properties_last
+    - sort_constructors_first
+    - sort_pub_dependencies
+    - sort_unnamed_constructors_first
     - test_types_in_equals
     - throw_in_finally
     - tighten_type_of_initializing_formals
-    # - type_annotate_public_apis
+    - type_annotate_public_apis
     - type_init_formals
     - type_literal_in_constant_pattern
     - unawaited_futures
-    # - unnecessary_await_in_return
+    - unnecessary_await_in_return
     - unnecessary_brace_in_string_interps
     - unnecessary_breaks
     - unnecessary_const
     - unnecessary_constructor_name
     - unnecessary_getters_setters
-    # - unnecessary_lambdas
+    - unnecessary_lambdas
     - unnecessary_late
     - unnecessary_library_directive
     - unnecessary_new
@@ -196,8 +196,8 @@ linter:
     - unreachable_from_main
     - unrelated_type_equality_checks
     - use_build_context_synchronously
-    # - use_colored_box
-    # - use_decorated_box
+    - use_colored_box
+    - use_decorated_box
     - use_enums
     - use_full_hex_values_for_flutter_colors
     - use_function_type_syntax_for_parameters
