--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -13,7 +13,7 @@ linter:
     always_use_package_imports: true
     annotate_overrides: true
     annotate_redeclares: true
-    avoid_annotating_with_dynamic: true
+    avoid_annotating_with_dynamic: false
     avoid_bool_literals_in_conditional_expressions: true
     avoid_catches_without_on_clauses: true
     avoid_catching_errors: true
