--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_spinkit: ^5.2.1
   http: ^0.13.5
   path: ^1.5.0
   uuid: ^3.0.1
