--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   http: ^0.13.5
   path: ^1.5.0
+  shared_preferences: ^2.2.3
   uuid: ^3.0.1
   video_player: ^2.9.2
   visibility_detector: ^0.4.0+2
