--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   http: ^0.13.5
   path: ^1.5.0
   shared_preferences: ^2.2.3
+  shimmer: ^3.0.0
   uuid: ^3.0.1
   video_player: ^2.9.2
   visibility_detector: ^0.4.0+2
